[project]
name = "vktools"
version = "1.0.0"
description = "dump things"
authors = ["nt"]
readme = "README.md"

requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "cryptography>=44.0.2",
    "ffmpeg-python>=0.2.0",
    "loguru>=0.7.3",
    "pillow>=11.1.0",
    "requests>=2.32.3",
    "vk-api",
    "yt-dlp>=2025.3.21",
]

[tool.uv.sources]
vk-api = { git = "https://github.com/python273/vk_api", rev = "495ecb73b2e3308cc6e128e376753d5451f95b47" }
